# FinancialTracker-DB

./: .pre-commit-config.yaml  README.md  pyproject.toml
github/workflows/: python-tests.yml
